--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <div class="row intro-content">
 
             <div class="column large-9 mob-full intro-text">
-                <h3>Jo Dunbar</h3>
                 <h1>
-                    Your words are my business <br>
+                    Jo Dunbar
                 </h1>
+                <h3>Copy. Content. Consultancy.</h3>
             </div>
 
             <div class="intro-scroll">
@@ -111,10 +111,10 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead" style="padding-bottom: 4em">
-                        A journalist with over 15 years experience, words are what I do. Whether it’s producing
+                        I am a journalist with over 15 years experience, words are what I do. Whether it’s producing
                         passionate copy for an opinion piece; interviewing experts and delivering an accurate yet
                         engaging health feature; or troubleshooting copy and making dull words sparkle for business
-                        clients, words are my business.
+                        clients, words are what I do.
                     </p>
                     <p>
                         I started my career on the Features team of a supplement at a national Sunday paper; from there
@@ -153,7 +153,7 @@
                 <h2 class="section-heading section-heading--centerbottom">Services</h2>
 
                 <p class="section-desc">
-                    My passion and goal is to help you make your business standout.
+                    Your words are my business
                 </p>
             </div>
         </div> <!-- end heading-block -->
@@ -205,8 +205,7 @@
             <div class="column large-full">
                 <h2 class="section-heading section-heading--centerbottom">Selected Works</h2>
                 <p class="section-desc">
-                    Here are some of my selected works I have done lately. Feel free to
-                    check them out.
+                    Want to read more? Here is some of my published work.
                 </p>
             </div>
         </div> <!-- end heading-block -->
