Some pre-live changes

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     Want to read more? Here is some of my published work.
                 </p>
             </div>
-        </div> <!-- end heading-block -->
+        </div>
 
         <div class="masonry-wrap">
 
@@ -234,7 +234,99 @@
                             <p></p>
                         </div>
                     </div>
-                </div> <!-- end masonry__brick -->
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jopl1.jpg" class="thumb-link" title="Health by numbers - Platinum" data-size="1269x1712">
+                                <img src="images/celeb/jopl1.jpg" alt="Health by numbers - Platinum">
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Health by numbers
+                            </h4>
+                            <p class="item-folio__cat">
+                                Platinum
+                            </p>
+                        </div>
+
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jorc1.jpg" class="thumb-link" title="Little Vintage Tips - Rachel Khoo" data-size="1050x700">
+                                <img src="images/celeb/jorc1.jpg" alt="Little Vintage Tips - Rachel Khoo">
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Rachel Khoo
+                            </h4>
+                            <p class="item-folio__cat">
+                                Reclaim
+                            </p>
+                        </div>
+
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jomb1.jpg" class="thumb-link" title="Decode your cravings" data-size="1050x700">
+                                <img src="images/celeb/jomb1.jpg" alt="Decode your cravings">
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Decode your cravings
+                            </h4>
+                            <p class="item-folio__cat">
+                                Mother and Baby
+                            </p>
+                        </div>
+
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jots1.jpg" class="thumb-link" title="My life in Health - Amanda Byram" data-size="1269x1712">
+                                <img src="images/celeb/jots1.jpg" alt="My life in Health - Amanda Byram">
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Amanda Byram
+                            </h4>
+                            <p class="item-folio__cat">
+                                Top Santé
+                            </p>
+                        </div>
+
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
@@ -257,7 +349,7 @@
                             <p></p>
                         </div>
                     </div>
-                </div> <!-- end masonry__brick -->
+                </div>
 
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
@@ -278,7 +370,7 @@
                             <p></p>
                         </div>
                     </div>
-                </div> <!-- end masonry__brick -->
+                </div>
 
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
@@ -300,7 +392,7 @@
                             <p></p>
                         </div>
                     </div>
-                </div> <!-- end masonry__brick -->
+                </div>
 
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
@@ -321,7 +413,7 @@
                             <p></p>
                         </div>
                     </div>
-                </div> <!-- end masonry__brick -->
+                </div>
 
             </div> <!-- end masonry -->
 
