Fixing first paragraph copy

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead" style="padding-bottom: 4em">
-                        I am a journalist with over 15 years experience. Whether it’s producing
-                        passionate copy for an opinion piece; interviewing experts and delivering an accurate yet
-                        engaging health feature; or troubleshooting copy and making dull words sparkle for business
-                        clients, words are what I do.
+                        I am a journalist with over 15 years experience; ranging from online outlets to national
+                        newspapers via glossy magazines. Whether it’s producing passionate copy for an opinion piece,
+                        interviewing experts and delivering an accurate yet engaging health feature; or troubleshooting
+                        copy and making dull words sparkle for business clients, words are what I do.
                     </p>
                     <p>
                         I started my career on the Features team of a supplement at a national Sunday paper; from there
