Adding new features to portfolio including Daily Telegraph, Platinum, Fabulous

--- a/index.html
+++ b/index.html
@@ -227,6 +227,69 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
+                            <a href="images/celeb/jogrh.png" class="thumb-link" title="Granny Hobbies" data-size="1050x700">
+                                <img src="images/celeb/jogrh.png"  alt="I've turned to granny hobbies to save my sanity">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                I've turned to granny hobbies to save my sanity
+                            </h4>
+                            <p class="item-folio__cat">
+                                Fabulous, The Sun on Sunday
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jodt1.jpg" class="thumb-link" title="Lockdown birthdays" data-size="1050x700">
+                                <img src="images/celeb/jodt1.jpg"  alt="I can't be the only parent glad to see the back of huge birthday gatherings ">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                I can't be the only parent glad to see the back of huge birthday gatherings
+                            </h4>
+                            <p class="item-folio__cat">
+                                Daily Telegraph
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jojt1.png" class="thumb-link" title="Jayne Torvill interview" data-size="1050x700">
+                                <img src="images/celeb/jojt1.png"  alt="Jayne Torvill  interview">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Jayne Torvill interview
+                            </h4>
+                            <p class="item-folio__cat">
+                                Platinum
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
                             <a href="images/celeb/swga1.png" class="thumb-link" title="Sober widow" data-size="976x1230">
                                 <img src="images/celeb/swga1.png"  alt="Things you only know if you're a sober widow">
                             </a>
@@ -237,6 +300,27 @@
                             </h4>
                             <p class="item-folio__cat">
                                 Grazia
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/joptwl1.png" class="thumb-link" title="Platinum losing weight" data-size="1050x700">
+                                <img src="images/celeb/joptwl1.png"  alt="8 reasons you aren't losing weight">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                8 reasons you aren't losing weight
+                            </h4>
+                            <p class="item-folio__cat">
+                                Platinum
                             </p>
                         </div>
                         <div class="item-folio__caption">
