Adding new content from portfolio

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead" style="padding-bottom: 4em">
-                        I am a journalist with over 15 years experience; ranging from online outlets to national
+                        I am a journalist with over 17 years experience; ranging from online outlets to national
                         newspapers via glossy magazines. Whether it’s producing passionate copy for an opinion piece,
                         interviewing experts and delivering an accurate yet engaging health feature; or troubleshooting
                         copy and making dull words sparkle for business clients, words are what I do.
@@ -223,6 +223,72 @@
 
             <div class="masonry">
                 <div class="grid-sizer"></div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jodto1.png" class="thumb-link" title="10 years of marriage" data-size="976x1230">
+                                <img src="images/celeb/jodto1.png"  alt="Why 10 years of marriage is a milestone worth celebrating, and not just for royals">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Why 10 years of marriage is a milestone worth
+                                celebrating, and not just for royals
+                            </h4>
+                            <p class="item-folio__cat">
+                                Daily Telegraph
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jopl2.png" class="thumb-link"
+                                    title="Yes, you can be a runner" data-size="976x1230">
+                                <img src="images/celeb/jopl2.png"  alt="Yes, you can be a runner">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Yes, you can be a runner
+                            </h4>
+                            <p class="item-folio__cat">
+                                Platinum
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/celeb/jowh1.png" class="thumb-link"
+                                    title="The impact of living life online" data-size="976x1230">
+                                <img src="images/celeb/jowh1.png"  alt="The impact of living life online">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                The impact of living life online
+                            </h4>
+                            <p class="item-folio__cat">
+                                Woman and Home
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
