Adding additional articles

--- a/index.html
+++ b/index.html
@@ -293,6 +293,28 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
+                            <a href="images/celeb/jomb1.png" class="thumb-link"
+                                    title="Gender disappointment: what is GD and is it common?" data-size="976x1230">
+                                <img src="images/celeb/jomb1.png"  alt="Gender disappointment: what is GD and is it common?">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Gender disappointment: what is GD and is it common?
+                            </h4>
+                            <p class="item-folio__cat">
+                                Mother &amp; Baby
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
                             <a href="images/celeb/jogrh.png" class="thumb-link" title="Granny Hobbies" data-size="976x1230">
                                 <img src="images/celeb/jogrh.png"  alt="I've turned to granny hobbies to save my sanity">
                             </a>
@@ -454,7 +476,7 @@
                                 Decode your cravings
                             </h4>
                             <p class="item-folio__cat">
-                                Mother and Baby
+                                Mother & Baby
                             </p>
                         </div>
 
