Adding new works

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <li><a class="smoothscroll" href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll" href="#services" title="services">Services</a></li>
                 <li><a class="smoothscroll" href="#works" title="portfolio">Portfolio</a></li>
+                <li><a class="smoothscroll" href="#broadcast" title="broadcast">Broadcast</a></li>
                 <li><a class="smoothscroll" href="#contact" title="contact me">Contact</a></li>
             </ul>
 
@@ -223,6 +224,174 @@
 
             <div class="masonry">
                 <div class="grid-sizer"></div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/features/jo-wo-30-plants-1.png"
+                                    class="thumb-link" 
+                                    title="Can you really eat 30 plants a week" 
+                                    data-size="976x1230">
+                                <img src="images/features/jo-wo-30-plants-1.png"  alt="Can you really eat 30 plants a week">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Can you really eat 30 plants a week
+                            </h4>
+                            <p class="item-folio__cat">
+                                Woman's Own
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/features/jo-telegraph-saturday-1.png"
+                                    class="thumb-link" 
+                                    title="The 2023 summer holiday survival guide" 
+                                    data-size="976x1230">
+                                <img src="images/features/jo-telegraph-saturday-1.png"  alt="The 2023 summer holiday survival guide">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                The 2023 summer holiday survival guide
+                            </h4>
+                            <p class="item-folio__cat">
+                                The Telegraph
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/features/jo-platinum-ice-time-1.png"
+                                    class="thumb-link" 
+                                    title="Have an ice time" 
+                                    data-size="976x1230">
+                                <img src="images/features/jo-platinum-ice-time-1.png"  alt="Have an ice time">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Have an ice time
+                            </h4>
+                            <p class="item-folio__cat">
+                                Platinum
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/features/jo-mw-change-your-life-20-mins.png"
+                                    class="thumb-link" 
+                                    title="Change your life 20 mins at a time" 
+                                    data-size="1050x700">
+                                <img src="images/features/jo-mw-change-your-life-20-mins.png"  alt="Change your life 20 mins at a time">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Change your life 20 mins at a time
+                            </h4>
+                            <p class="item-folio__cat">
+                                My Weekly
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/features/jo-gh-time-for-women-to-feel-safe-1.png"
+                                    class="thumb-link" 
+                                    title="It's time for women to feel safe" 
+                                    data-size="1050x700">
+                                <img src="images/features/jo-gh-time-for-women-to-feel-safe-1.png"  alt="It's time for women to feel safe">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                It's time for women to feel safe
+                            </h4>
+                            <p class="item-folio__cat">
+                                Good Housekeeping
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/features/jo-gh-keeping-ahead-of-children-digital-age.png"
+                                    class="thumb-link" 
+                                    title="Keeping ahead of our children in the digital age" 
+                                    data-size="1050x700">
+                                <img src="images/features/jo-gh-keeping-ahead-of-children-digital-age.png"  alt="Keeping ahead of our children in the digital age">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                Keeping ahead of our children in the digital age
+                            </h4>
+                            <p class="item-folio__cat">
+                                Good Housekeeping
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                        <div class="item-folio__thumb">
+                            <a href="images/features/jo-gh-childcare-1.png"
+                                    class="thumb-link" 
+                                    title="How can we stop childcare holding women back" 
+                                    data-size="1050x700">
+                                <img src="images/features/jo-gh-childcare-1.png"  alt="How can we stop childcare holding women back">
+                            </a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                                    How can we stop childcare holding women back
+                            </h4>
+                            <p class="item-folio__cat">
+                                Good Housekeeping
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
@@ -602,6 +771,24 @@
 
     </section> <!-- end s-work -->
 
+    <!-- broadcast ================================================== -->
+    <section id="broadcast" class="s-contact ss-dark target-section">
+
+        <div class="row heading-block" data-aos="fade-up">
+            <div class="column large-full">
+                <h2 class="section-heading">Broadcast</h2>
+            </div>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+            <div class="column large-full">
+                <p class="lead">
+                    I also do broadcast work.
+                </p>
+            </div>
+        </div>
+
+    </section> <!-- end s-contact -->
 
     <!-- testimonies
     ================================================== -->
