Removing broadcast section for now

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                 <li><a class="smoothscroll" href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll" href="#services" title="services">Services</a></li>
                 <li><a class="smoothscroll" href="#works" title="portfolio">Portfolio</a></li>
+                <!--
                 <li><a class="smoothscroll" href="#broadcast" title="broadcast">Broadcast</a></li>
+                -->
                 <li><a class="smoothscroll" href="#contact" title="contact me">Contact</a></li>
             </ul>
 
@@ -772,6 +774,7 @@
     </section> <!-- end s-work -->
 
     <!-- broadcast ================================================== -->
+    <!--
     <section id="broadcast" class="s-contact ss-dark target-section">
 
         <div class="row heading-block" data-aos="fade-up">
@@ -788,8 +791,10 @@
             </div>
         </div>
 
-    </section> <!-- end s-contact -->
-
+    </section> 
+    -->
+    <!-- end s-contact -->
+    
     <!-- testimonies
     ================================================== -->
     <section class="s-testimonials">
