--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead" style="padding-bottom: 4em">
-                        I am a journalist with over 17 years experience; ranging from online outlets to national
+                        I am a journalist with over 20 years of experience; ranging from online outlets to national
                         newspapers via glossy magazines. Whether it’s producing passionate copy for an opinion piece,
                         interviewing experts and delivering an accurate yet engaging health feature; or troubleshooting
                         copy and making dull words sparkle for business clients, words are what I do.
